--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react-scripts": "0.9.5"
   },
   "dependencies": {
+    "random-color": "^1.0.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-onclickoutside": "^5.11.1",
